--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
